reviewed 0/1 matrix exercises

--- a/leetcode-scaffold/CMakeLists.txt
+++ b/leetcode-scaffold/CMakeLists.txt
@@ -156,7 +156,7 @@ target_link_libraries(backtrace_word_ladder)
 
 add_executable(backtrace_01_matrix backtrace_01_matrix.cpp ${PUB_UTIL_FILES})
 target_compile_features(backtrace_01_matrix PUBLIC cxx_auto_type)
-target_link_libraries(backtrace_01_matrix)
+target_link_libraries(backtrace_01_matrix spdlog::spdlog_header_only)
 
 add_executable(backtrace_partition_array backtrace_partition_array.cpp ${PUB_UTIL_FILES})
 target_compile_features(backtrace_partition_array PUBLIC cxx_auto_type)
